# Django-polls-original

./: README.md
django-polls/: MANIFEST.in  setup.cfg
django-polls/polls/: admin.py  tests.py  urls.py  views.py
django-polls/polls/migrations/: 0001_initial.py
django-polls/polls/static/polls/: style.css
django-polls/polls/templates/polls/: detail.html  index.html  results.html  summary.html
mysite/mysite/: settings.py
